[gd_scene load_steps=2 format=3 uid="uid://cqfjewwe1ylh1"]

[ext_resource type="Script" uid="uid://bvw5peyxoc30r" path="res://scripts/pause_menu.gd" id="1_n87rw"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_n87rw")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 417.0
offset_top = 150.0
offset_right = 732.0
offset_bottom = 453.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
process_mode = 3
layout_mode = 2
text = "Continuer"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Recommencer"

[node name="Controls" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quitter"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
